fix: footer overlap

--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,20 @@
 
 /* import preline */
 
-@import 'preline';
+/* @import 'preline'; */
 
 html {
-    @apply font-nunito;
+  @apply font-nunito;
 }
 
 /* CSS Menghilangkan Arrow Input Number */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox */
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
-
